# fyro

./: .gitmodules  CMakeLists.txt  Doxyfile  doxygen  fyro.hero.json  readme.md
.github/workflows/: windows.yml
cmake/: CompilerWarnings.cmake
data/games/4thdimension/: 4thdimension.cc
data/games/demo/: main.json  main.lox
data/games/platformer/: level1.tmx  main.lox
data/games/snake/: main.json  main.lox
data/games/spaceship/: main.lox
data/sprites/cards/: CMakeLists.txt
data/sprites/cards/sprites/: cards.cc  cards.h
data/sprites/onebit/: CMakeLists.txt
data/sprites/onebit/sprites/: onebit.cc  onebit.h  onebit_font.cc  onebit_font.h
data/sprites/space/: space.h
data/sprites/ui/: ui.h
examples/: 4thdimension.cc  CMakeLists.txt  demo.cc  minesweeper.cc
src/: CMakeLists.txt
src/fyro/: assert.cc  bind.colors.cc  bind.colors.h  bind.h  bind.input.cc  bind.input.h  bind.physics.cc  bind.physics.h  bind.render.cc  bind.render.h  cache.cc  cache.h  cint.cc  cint.h  collision2.cc  collision2.h  compiler_warning.h  dependency_glm.cc  dependency_glm.h  dependency_opengl.cc  dependency_sdl.cc  exception.cc  exception.h  fyro.h  game.cc  game.h  gamedata.cc  gamedata.h  input.cc  input.h  io.cc  io.h  log.cc  log.h  main.cc  main.sdl.cc  main.sdl.h  pch.private.h  pch.public.h  random.cc  (+17 more)
src/fyro/dependencies/: dependency_glad.h  dependency_glm.cc  dependency_imgui.h  dependency_opengl.cc  dependency_opengl.h  dependency_sdl.cc
src/fyro/input/: axis.cc  axis.h  key.cc  key.h
src/fyro/render/: font.cc  font.h  layer2.cc  layer2.h  opengl_utils.cc  opengl_utils.h  render2.cc  render2.h  shader.cc  shader.h  texture.cc  texture.h  uniform.cc  uniform.h  vertex_layout.cc  vertex_layout.h  vertex_layout.test.cc  viewportdef.cc  viewportdef.h
src/fyro/render/empty/: handles.cc  light.cc  render_world_interface.cc  vfs.cc
src/tred/: fyro.h
src/tred/render/: layer2.cc  layer2.h  viewportdef.cc  viewportdef.h
tools/: windows.py
